crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__super__indirectly_inherited.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/indirectly_inherited.lox
---
success: true
exit_code: 0
----- stdout -----
C.foo()
A.foo()

----- stderr -----
